# LIO_CTA

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.txt  setup.sh
src/: BSplineSurfaceFitter.h  RationalBezier.h  main.cpp
